--- a/styling.sass
+++ b/styling.sass
@@ -24,7 +24,10 @@ $breakpoint-cell: 411px
         background: rgba(0,0,0,0)
         color: $color
         box-shadow: inset 0 0 0 3px $color
-    
+
+html.sr
+    visibility: hidden
+
 body
     display: grid
     // grid colum 2 and 4 have max 250px assumming picture will stretch good until 70% + 500px of the screen
